[package]
name = "crypto-mm-rust"
version = "0.1.0"
authors = ["Daniel Crook <daniel.crook@st-aidans.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.24.0"
futures = "0.1"
tokio = "0.1"
#json = "0.12.4"
serde_json = "1.0.52"
serde = { version = "1.0.106", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }